Film/Arts - Make sure lines aren’t wrapping

--- a/src/style/art.scss
+++ b/src/style/art.scss
@@ -10,19 +10,6 @@
         opacity: 1
     }
 
-    .fade-enter {
-        background: blue;
-    }
-
-    .fade-enter-active {
-        background: red;
-    }
-
-    .artImage-fade {
-        width: 100%;
-        background: yellow;
-    }
-
     .content {
         width: 45%;
         height: 100%;
@@ -103,7 +90,6 @@
         margin: 0;
         padding: 0;
         overflow: hidden;
-        // background: lightyellow;
     }
 
     li {
@@ -113,22 +99,15 @@
             margin-top: 0;
             padding: 0;
             text-transform: lowercase;
-        // background: limegreen;            
+            white-space: nowrap;
         }
-        // background: royalblue;
-            
 
         &.active {
             h2:before {
                 content: "• ";
                 font-family: Arial, Helvetica, sans-serif;
-                // font-size: 5rem;
                 display: inline-block;
-                // height: 20%;
-                // position: relative;
-                // top: 1.5vh;
                 margin-right: 0.5rem;
-                // background: rebeccapurple;
                 padding: 0;
             }
         }
